# student-management-system

./: CMakeLists.txt  readme.md
include/: Student.h  StudentManager.h
src/: Student.cpp  StudentManager.cpp  main.cpp
